@@ -17,10 +17,8 @@ public class naverLoginController implements Controller {
   @Override
   public String requestHandler(HttpServletRequest req, HttpServletResponse res) throws ServletException, IOException {
 
-    System.out.println("여기 => naverLogin");
-
     String clientId = "XgSWLhZ3ruY679duMXeW";//애플리케이션 클라이언트 아이디값";
-    String redirectURI = URLEncoder.encode("http://localhost:8080/Hotudon/naverCallback.do", StandardCharsets.UTF_8);
+    String redirectURI = URLEncoder.encode("http://localhost:8080/Hotudon/naverCallback.do", "UTF-8");
     SecureRandom random = new SecureRandom();
     String state = new BigInteger(130, random).toString();
     String apiURL = "https://nid.naver.com/oauth2.0/authorize?response_type=code"
@@ -30,16 +28,6 @@ public class naverLoginController implements Controller {
     HttpSession session = req.getSession();
     session.setAttribute("state", state);
 
-//	    try {
-//	    	System.out.println("들어옴?");
-//	        res.setContentType("text/html; charset=utf-8");
-//	        PrintWriter w = res.getWriter();
-//	        w.write("<script>location.href='<%=apiURL%>';</script>");
-//	        w.flush();
-//	        w.close();
-//	    } catch(Exception e) {
-//	        e.printStackTrace();
-//	    }
     res.getWriter().print(apiURL);
     return null;
   }
